crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__cache_large.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.cache_large::tag::cache_large":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 3
        message:
          PercentFormat:
            template: "'%r' tag requires at least 2 arguments."
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    as_var: keep
filter_arities: {}
block_specs:
  "src.pretix.base.templatetags.cache_large::tag::cache_large":
    end_tag: endcache_large
    intermediates: []
    opaque: false
