crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__calendarhead.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.calendarhead::filter::iter_weekdays":
    expects_arg: false
    arg_optional: false
block_specs: {}
