crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__daterange.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.daterange::filter::datetimerange":
    expects_arg: true
    arg_optional: false
block_specs: {}
