crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__eventsignal.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.eventsignal::tag::eventsignal":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: event
        required: true
        kind: Variable
        position: 0
      - name: signame
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "src.pretix.base.templatetags.eventsignal::tag::signal":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: signame
        required: true
        kind: Variable
        position: 0
      - name: request
        required: true
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
