crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__icon.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.icon::tag::icon":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: key
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
