crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__money.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.money::filter::money":
    expects_arg: true
    arg_optional: true
  "src.pretix.base.templatetags.money::filter::money_numberfield":
    expects_arg: true
    arg_optional: true
block_specs: {}
