crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__phone_format.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.phone_format::filter::phone_format":
    expects_arg: true
    arg_optional: true
block_specs: {}
